--- a/product_test/pom.xml
+++ b/product_test/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>test</artifactId>
+    <artifactId>product_test</artifactId>
 
     <dependencies>
         <dependency>
@@ -22,6 +22,4 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
-
-
 </project>
