--- a/product_test/src/main/resources/application.yml
+++ b/product_test/src/main/resources/application.yml
@@ -12,3 +12,11 @@ spring:
     database: MySQL
     show-sql: true
     open-in-view: true
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:9000/eureka
+
+
