--- a/eureka_test/src/main/resources/application.yml
+++ b/eureka_test/src/main/resources/application.yml
@@ -8,3 +8,6 @@ eureka:
     fetch-registry: false #是否从eureka注册信息
     service-url:  #配置暴露给Eureka Client的请求地址
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  server:
+    enable-self-preservation: false #关闭自我保护
+    eviction-interval-timer-in-ms: 4000 #剔除服务间隔
