--- a/product_test/src/main/resources/application.yml
+++ b/product_test/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
 eureka:
   instance:
     prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+    lease-renewal-interval-in-seconds: 5 #发送心跳的间隔
+    lease-expiration-duration-in-seconds: 10 #续约到期的时间
   client:
     service-url:
       defaultZone: http://127.0.0.1:9000/eureka
