--- a/order_test/pom.xml
+++ b/order_test/pom.xml
@@ -25,5 +25,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>sprint-retry</artifactId>
+            <version>1.2.5.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
