--- a/order_test/pom.xml
+++ b/order_test/pom.xml
@@ -27,8 +27,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.retry</groupId>
-            <artifactId>sprint-retry</artifactId>
-            <version>1.2.5.RELEASE</version>
+            <artifactId>spring-retry</artifactId>
         </dependency>
     </dependencies>
 </project>
